lib/chromaprint_native.g.dart


  late final _chromaprint_get_fingerprintPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<ChromaprintContext>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'chromaprint_get_fingerprint');
  late final _chromaprint_get_fingerprint =
      _chromaprint_get_fingerprintPtr.asFunction<
          int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// Return the calculated fingerprint as an array of 32-bit integers.
  ///
  /// The caller is responsible for freeing the returned pointer using
  /// chromaprint_dealloc().
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[out] fingerprint pointer to a pointer, where a pointer to the allocated array
  /// will be stored
  /// @param[out] size number of items in the returned raw fingerprint
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_get_raw_fingerprint(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Pointer<ffi.Uint32>> fingerprint,
    ffi.Pointer<ffi.Int> size,
  ) {
    return _chromaprint_get_raw_fingerprint(
      ctx,
      fingerprint,
      size,
    );
  }

  late final _chromaprint_get_raw_fingerprintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Pointer<ffi.Uint32>>,
              ffi.Pointer<ffi.Int>)>>('chromaprint_get_raw_fingerprint');
  late final _chromaprint_get_raw_fingerprint =
      _chromaprint_get_raw_fingerprintPtr.asFunction<
          int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Pointer<ffi.Uint32>>, ffi.Pointer<ffi.Int>)>();

  /// Return the length of the current raw fingerprint.
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[out] size number of items in the current raw fingerprint
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_get_raw_fingerprint_size(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Int> size,
  ) {
    return _chromaprint_get_raw_fingerprint_size(
      ctx,
      size,
    );
  }

  late final _chromaprint_get_raw_fingerprint_sizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Int>)>>('chromaprint_get_raw_fingerprint_size');
  late final _chromaprint_get_raw_fingerprint_size =
      _chromaprint_get_raw_fingerprint_sizePtr.asFunction<
          int Function(
              ffi.Pointer<ChromaprintContext>, ffi.Pointer<ffi.Int>)>();

  /// Return 32-bit hash of the calculated fingerprint.
  ///
  /// See chromaprint_hash_fingerprint() for details on how to use the hash.
  ///
  /// @param[in] ctx Chromaprint context pointer
  /// @param[out] hash pointer to a 32-bit integer where the hash will be stored
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_get_fingerprint_hash(
    ffi.Pointer<ChromaprintContext> ctx,
    ffi.Pointer<ffi.Uint32> hash,
  ) {
    return _chromaprint_get_fingerprint_hash(
      ctx,
      hash,
    );
  }

  late final _chromaprint_get_fingerprint_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ChromaprintContext>,
              ffi.Pointer<ffi.Uint32>)>>('chromaprint_get_fingerprint_hash');
  late final _chromaprint_get_fingerprint_hash =
      _chromaprint_get_fingerprint_hashPtr.asFunction<
          int Function(
              ffi.Pointer<ChromaprintContext>, ffi.Pointer<ffi.Uint32>)>();

  /// Clear the current fingerprint, but allow more data to be processed.
  ///
  /// This is useful if you are processing a long stream and want to many
  /// smaller fingerprints, instead of waiting for the entire stream to be
  /// processed.
  ///
  /// @param[in] ctx Chromaprint context pointer
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_clear_fingerprint(
    ffi.Pointer<ChromaprintContext> ctx,
  ) {
    return _chromaprint_clear_fingerprint(
      ctx,
    );
  }

  late final _chromaprint_clear_fingerprintPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ChromaprintContext>)>>(
      'chromaprint_clear_fingerprint');
  late final _chromaprint_clear_fingerprint = _chromaprint_clear_fingerprintPtr
      .asFunction<int Function(ffi.Pointer<ChromaprintContext>)>();

  /// Compress and optionally base64-encode a raw fingerprint
  ///
  /// The caller is responsible for freeing the returned pointer using
  /// chromaprint_dealloc().
  ///
  /// @param[in] fp pointer to an array of 32-bit integers representing the raw
  /// fingerprint to be encoded
  /// @param[in] size number of items in the raw fingerprint
  /// @param[in] algorithm Chromaprint algorithm version which was used to generate the
  /// raw fingerprint
  /// @param[out] encoded_fp pointer to a pointer, where the encoded fingerprint will be
  /// stored
  /// @param[out] encoded_size size of the encoded fingerprint in bytes
  /// @param[in] base64 Whether to return binary data or base64-encoded ASCII data. The
  /// compressed fingerprint will be encoded using base64 with the
  /// URL-safe scheme if you set this parameter to 1. It will return
  /// binary data if it's 0.
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_encode_fingerprint(
    ffi.Pointer<ffi.Uint32> fp,
    int size,
    int algorithm,
    ffi.Pointer<ffi.Pointer<ffi.Char>> encoded_fp,
    ffi.Pointer<ffi.Int> encoded_size,
    int base64,
  ) {
    return _chromaprint_encode_fingerprint(
      fp,
      size,
      algorithm,
      encoded_fp,
      encoded_size,
      base64,
    );
  }

  late final _chromaprint_encode_fingerprintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Uint32>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('chromaprint_encode_fingerprint');
  late final _chromaprint_encode_fingerprint =
      _chromaprint_encode_fingerprintPtr.asFunction<
          int Function(ffi.Pointer<ffi.Uint32>, int, int,
              ffi.Pointer<ffi.Pointer<ffi.Char>>, ffi.Pointer<ffi.Int>, int)>();

  /// Uncompress and optionally base64-decode an encoded fingerprint
  ///
  /// The caller is responsible for freeing the returned pointer using
  /// chromaprint_dealloc().
  ///
  /// @param[in] encoded_fp pointer to an encoded fingerprint
  /// @param[in] encoded_size size of the encoded fingerprint in bytes
  /// @param[out] fp pointer to a pointer, where the decoded raw fingerprint (array
  /// of 32-bit integers) will be stored
  /// @param[out] size Number of items in the returned raw fingerprint
  /// @param[out] algorithm Chromaprint algorithm version which was used to generate the
  /// raw fingerprint
  /// @param[in] base64 Whether the encoded_fp parameter contains binary data or
  /// base64-encoded ASCII data. If 1, it will base64-decode the data
  /// before uncompressing the fingerprint.
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_decode_fingerprint(
    ffi.Pointer<ffi.Char> encoded_fp,
    int encoded_size,
    ffi.Pointer<ffi.Pointer<ffi.Uint32>> fp,
    ffi.Pointer<ffi.Int> size,
    ffi.Pointer<ffi.Int> algorithm,
    int base64,
  ) {
    return _chromaprint_decode_fingerprint(
      encoded_fp,
      encoded_size,
      fp,
      size,
      algorithm,
      base64,
    );
  }

  late final _chromaprint_decode_fingerprintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Pointer<ffi.Uint32>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Int)>>('chromaprint_decode_fingerprint');
  late final _chromaprint_decode_fingerprint =
      _chromaprint_decode_fingerprintPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Char>,
              int,
              ffi.Pointer<ffi.Pointer<ffi.Uint32>>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              int)>();

  /// Generate a single 32-bit hash for a raw fingerprint.
  ///
  /// If two fingerprints are similar, their hashes generated by this function
  /// will also be similar. If they are significantly different, their hashes
  /// will most likely be significantly different as well, but you can't rely
  /// on that.
  ///
  /// You compare two hashes by counting the bits in which they differ. Normally
  /// that would be something like POPCNT(hash1 XOR hash2), which returns a
  /// number between 0 and 32. Anthing above 15 means the hashes are
  /// completely different.
  ///
  /// @param[in] fp pointer to an array of 32-bit integers representing the raw
  /// fingerprint to be hashed
  /// @param[in] size number of items in the raw fingerprint
  /// @param[out] hash pointer to a 32-bit integer where the hash will be stored
  ///
  /// @return 0 on error, 1 on success
  int chromaprint_hash_fingerprint(
    ffi.Pointer<ffi.Uint32> fp,
    int size,
    ffi.Pointer<ffi.Uint32> hash,
  ) {
    return _chromaprint_hash_fingerprint(
      fp,
      size,
      hash,
    );
  }

  late final _chromaprint_hash_fingerprintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Uint32>, ffi.Int,
              ffi.Pointer<ffi.Uint32>)>>('chromaprint_hash_fingerprint');
  late final _chromaprint_hash_fingerprint =
      _chromaprint_hash_fingerprintPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Uint32>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Free memory allocated by any function from the Chromaprint API.
  ///
  /// @param ptr pointer to be deallocated
  void chromaprint_dealloc(
    ffi.Pointer<ffi.Void> ptr,
  ) {
    return _chromaprint_dealloc(
      ptr,
    );
  }

  late final _chromaprint_deallocPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'chromaprint_dealloc');
  late final _chromaprint_dealloc = _chromaprint_deallocPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

final class __fsid_t extends ffi.Struct {
  @ffi.Array.multi([2])
  external ffi.Array<ffi.Int> __val;
}

final class ChromaprintContextPrivate extends ffi.Opaque {}

final class ChromaprintMatcherContextPrivate extends ffi.Opaque {}

abstract class ChromaprintAlgorithm {
  static const int CHROMAPRINT_ALGORITHM_TEST1 = 0;
  static const int CHROMAPRINT_ALGORITHM_TEST2 = 1;
  static const int CHROMAPRINT_ALGORITHM_TEST3 = 2;
  static const int CHROMAPRINT_ALGORITHM_TEST4 = 3;
  static const int CHROMAPRINT_ALGORITHM_TEST5 = 4;
  static const int CHROMAPRINT_ALGORITHM_DEFAULT = 1;
}

typedef ChromaprintContext = ChromaprintContextPrivate;

const int _STDINT_H = 1;

const int _FEATURES_H = 1;

const int _DEFAULT_SOURCE = 1;

const int __GLIBC_USE_ISOC2X = 1;

const int __USE_ISOC11 = 1;

const int __USE_ISOC99 = 1;

const int __USE_ISOC95 = 1;

const int _POSIX_SOURCE = 1;

const int _POSIX_C_SOURCE = 200809;

const int __USE_POSIX = 1;

const int __USE_POSIX2 = 1;

const int __USE_POSIX199309 = 1;

const int __USE_POSIX199506 = 1;

const int __USE_XOPEN2K = 1;

const int __USE_XOPEN2K8 = 1;

const int _ATFILE_SOURCE = 1;

const int __WORDSIZE = 64;

const int __WORDSIZE_TIME64_COMPAT32 = 1;

const int __SYSCALL_WORDSIZE = 64;

const int __TIMESIZE = 64;

const int __USE_MISC = 1;

const int __USE_ATFILE = 1;

const int __USE_FORTIFY_LEVEL = 0;

const int __GLIBC_USE_DEPRECATED_GETS = 0;

const int __GLIBC_USE_DEPRECATED_SCANF = 0;

const int __GLIBC_USE_C2X_STRTOL = 1;

const int _STDC_PREDEF_H = 1;

const int __STDC_IEC_559__ = 1;

const int __STDC_IEC_60559_BFP__ = 201404;

const int __STDC_IEC_559_COMPLEX__ = 1;

const int __STDC_IEC_60559_COMPLEX__ = 201404;

const int __STDC_ISO_10646__ = 201706;

const int __GNU_LIBRARY__ = 6;

const int __GLIBC__ = 2;
